[package]
name = "cloudflare-dyndns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
futures = "0.3.16"
reqwest = { version = "0.11.4", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
